[gd_scene load_steps=51 format=2]

[ext_resource path="res://Scripts/Jogo.gd" type="Script" id=1]
[ext_resource path="res://Sprits/cerca.png" type="Texture" id=2]
[ext_resource path="res://Sprits/fundo.png" type="Texture" id=3]
[ext_resource path="res://Sprits/fundo2.png" type="Texture" id=4]
[ext_resource path="res://Sprits/path4515.png" type="Texture" id=5]
[ext_resource path="res://Scenas/Batisteiro.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenas/Boi.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenas/Cavalo.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenas/Botoes.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprits/sprites_plataformas.png" type="Texture" id=10]
[ext_resource path="res://Sprits/puxar1.png" type="Texture" id=11]
[ext_resource path="res://Sprits/puxar2.png" type="Texture" id=12]
[ext_resource path="res://Sprits/botoes/P.png" type="Texture" id=13]
[ext_resource path="res://Sprits/botoes/pause.png" type="Texture" id=14]
[ext_resource path="res://Sprits/cerca pequena.png" type="Texture" id=15]
[ext_resource path="res://Sprits/portao.png" type="Texture" id=16]
[ext_resource path="res://Sprits/bret.png" type="Texture" id=17]
[ext_resource path="res://sons/Som cavalo.ogg" type="AudioStream" id=18]
[ext_resource path="res://sons/Som toro.ogg" type="AudioStream" id=19]
[ext_resource path="res://sons/somHit.ogg" type="AudioStream" id=20]
[ext_resource path="res://sons/son de fundo da corrida.ogg" type="AudioStream" id=21]
[ext_resource path="res://sons/ValeuBoi.ogg" type="AudioStream" id=22]
[ext_resource path="res://sons/SomZero.ogg" type="AudioStream" id=23]
[ext_resource path="res://sons/somScore.ogg" type="AudioStream" id=24]
[ext_resource path="res://fontes/font150.font" type="BitmapFont" id=25]
[ext_resource path="res://Sprits/botoes/estrela_AC.png" type="Texture" id=26]
[ext_resource path="res://fontes/font160.font" type="BitmapFont" id=27]
[ext_resource path="res://Sprits/toros/vaca1.png" type="Texture" id=28]
[ext_resource path="res://Sprits/toros/vaca2.png" type="Texture" id=29]
[ext_resource path="res://Sprits/toros/vaca6.png" type="Texture" id=30]
[ext_resource path="res://Sprits/toros/vaca5.png" type="Texture" id=31]
[ext_resource path="res://Sprits/toros/vaca3.png" type="Texture" id=32]
[ext_resource path="res://Sprits/vacaanim/caido1.png" type="Texture" id=33]
[ext_resource path="res://Sprits/vacaanim/caido2.png" type="Texture" id=34]
[ext_resource path="res://Sprits/vacaanim/caido3.png" type="Texture" id=35]
[ext_resource path="res://Sprits/vacaanim/caindo0.png" type="Texture" id=36]
[ext_resource path="res://Sprits/vacaanim/caindo1.png" type="Texture" id=37]
[ext_resource path="res://Sprits/vacaanim/caindo2.png" type="Texture" id=38]
[ext_resource path="res://Sprits/vacaanim/caindo3.png" type="Texture" id=39]

[sub_resource type="Animation" id=1]
resource_name = "BackAnim"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/fundo1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3224.13, 358.432 ), Vector2( 205.893, 359.714 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/cerca2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1070.92, 610.713 ), Vector2( -1944.91, 611.293 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackAnim/cerca1 :position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3227.72, 609.393 ), Vector2( 211.883, 609.973 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BackAnim/fundo2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1060.2, 358.54 ), Vector2( -1964.63, 359.12 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cabine:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 331.762, 421.884 ), Vector2( -2686.27, 421.884 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BackAnim/faixa1:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3203.46, 559.52 ), Vector2( 186.098, 558.593 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BackAnim/faixa2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3435.83, 327.408 ), Vector2( 417.744, 329.961 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BackAnim/DetectarPontos:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.81641, 0 ), Vector2( -3021.21, 4.54419 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Limites/linhabret1:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 451.748, 368.293 ), Vector2( -2565, 368.293 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Limites/linhabret2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 310.269, 636.288 ), Vector2( -2710, 636.288 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 136.31, 234.981 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 849.767, 40.1476 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 843.801, 45.3915 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 0.341675, 730.54 )

[sub_resource type="SegmentShape2D" id=6]
b = Vector2( 0.416183, 1019.11 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 15.1784, -40.3366 )
b = Vector2( -52.7455, 78.828 )

[sub_resource type="Animation" id=8]
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PortaoAnim/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 348.241, 427.706 ), Vector2( 425.056, 302.775 ) ]
}

[sub_resource type="Animation" id=9]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("boisAnim/bois:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -421.217, -2.78951 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("puxarcair/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "caindo", "caido" ]
}

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "caido",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "caindo",
"speed": 5.0
} ]

[node name="Jogo" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]
anims/BackAnim = SubResource( 1 )

[node name="cerca1 " type="Sprite" parent="BackAnim"]
position = Vector2( 3227.72, 609.393 )
scale = Vector2( 1.00152, 1 )
z_index = 6
texture = ExtResource( 2 )

[node name="cerca2" type="Sprite" parent="BackAnim"]
position = Vector2( 1070.92, 612.564 )
scale = Vector2( 1.00152, 1 )
z_index = 6
texture = ExtResource( 2 )

[node name="fundo1" type="Sprite" parent="BackAnim"]
position = Vector2( 3224.13, 358.432 )
scale = Vector2( 1, 0.927346 )
texture = ExtResource( 3 )

[node name="fundo2" type="Sprite" parent="BackAnim"]
position = Vector2( 1060.2, 358.54 )
scale = Vector2( 0.999905, 0.927302 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="faixa1" type="Sprite" parent="BackAnim"]
position = Vector2( 3175.77, 557.003 )
rotation = 0.316365
scale = Vector2( 0.942007, 1.01186 )
z_index = 1
z_as_relative = false
texture = ExtResource( 5 )

[node name="faixa2" type="Sprite" parent="BackAnim"]
position = Vector2( 3438.35, 294.68 )
rotation = 0.276483
z_index = 1
z_as_relative = false
texture = ExtResource( 5 )
offset = Vector2( 110.253, 211.885 )

[node name="DetectarPontos" type="Area2D" parent="BackAnim"]
position = Vector2( -6.81641, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackAnim/DetectarPontos"]
position = Vector2( 3334.91, 538.017 )
rotation = -0.148262
shape = SubResource( 2 )

[node name="batisteiro" parent="." instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 390.813, 573.763 )
z_index = 5
z_as_relative = false

[node name="TempoBati" type="Timer" parent="batisteiro"]

[node name="boi" parent="." instance=ExtResource( 7 )]
editor/display_folded = true
position = Vector2( 290, 440 )
z_as_relative = false

[node name="TempoBoi" type="Timer" parent="boi"]

[node name="Vaqueiro" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 500.531, 391.473 )
scale = Vector2( 1.08969, 0.86976 )
z_index = 1

[node name="TempoVaqueiro" type="Timer" parent="Vaqueiro"]

[node name="Limites" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CercaCima" type="CollisionShape2D" parent="Limites"]
light_mask = 0
position = Vector2( 742.823, 287.417 )
scale = Vector2( 0.965856, 1 )
shape = SubResource( 3 )

[node name="cerca cima" type="Area2D" parent="Limites"]
position = Vector2( 737.646, 318.153 )
scale = Vector2( 0.965856, 1 )

[node name="CercaBaixo" type="CollisionShape2D" parent="Limites"]
position = Vector2( 727.405, 763.047 )
shape = SubResource( 4 )

[node name="cercabaixo" type="Area2D" parent="Limites"]

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="Limites"]
position = Vector2( 1279.68, 6.93747 )
shape = SubResource( 5 )

[node name="CollisionShape2D 4" type="CollisionShape2D" parent="Limites"]
shape = SubResource( 6 )

[node name="linhabret1" type="CollisionShape2D" parent="Limites"]
position = Vector2( 451.748, 368.293 )
shape = SubResource( 7 )

[node name="linhabret2" type="CollisionShape2D" parent="Limites"]
position = Vector2( 310.269, 636.288 )
shape = SubResource( 7 )

[node name="comandos" type="Node2D" parent="."]

[node name="direconais" parent="comandos" instance=ExtResource( 9 )]
position = Vector2( 1165.8, 597.614 )
z_index = 6

[node name="jogar" type="TouchScreenButton" parent="comandos"]
modulate = Color( 1, 1, 1, 0.85 )
position = Vector2( 511.538, 211.667 )
rotation = 0.0024115
scale = Vector2( 2.10435, 1.96504 )
z_index = 5
normal = ExtResource( 10 )
action = "começar"

[node name="puxar" type="TouchScreenButton" parent="comandos"]
position = Vector2( 44.551, 569.589 )
scale = Vector2( 1.79897, 1.73148 )
z_index = 6
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
action = "puxar"

[node name="Sprite" type="Sprite" parent="comandos/puxar"]
position = Vector2( 39.3471, 39.994 )
scale = Vector2( 0.526568, 0.526568 )
texture = ExtResource( 13 )

[node name="pause" type="TouchScreenButton" parent="comandos"]
pause_mode = 1
position = Vector2( 1162.51, 17.5721 )
scale = Vector2( 1.29152, 1.23332 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="comandos/pause"]
position = Vector2( 38.9054, 38.1666 )
texture = ExtResource( 14 )

[node name="Cabine" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 331.762, 421.884 )
scale = Vector2( 0.8, 1.11788 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cerca1" type="Sprite" parent="Cabine"]
position = Vector2( -168.976, -118.56 )
z_index = 1
texture = ExtResource( 15 )

[node name="Cerca2" type="Sprite" parent="Cabine"]
position = Vector2( -316.144, 0 )
texture = ExtResource( 15 )

[node name="PortaoAnim" type="AnimationPlayer" parent="Cabine"]
anims/PortaoAnim = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Cabine/PortaoAnim"]
position = Vector2( 343.831, 429.395 )
scale = Vector2( 0.839357, 0.932535 )
z_index = 2
texture = ExtResource( 16 )

[node name="Parede" type="Sprite" parent="Cabine"]
position = Vector2( 0.237885, 31.0273 )
scale = Vector2( 0.9, 1 )
z_index = 4
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Parede1" type="Sprite" parent="Cabine"]
position = Vector2( 8.32562, -19.1706 )
scale = Vector2( 0.9, 1 )
z_index = 1

[node name="Iniciar" type="Timer" parent="."]

[node name="Sons" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 674.7, 725.05 )

[node name="SomCavalo" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 18 )

[node name="SomToro" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 19 )

[node name="SomPortao" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 20 )

[node name="SomFundo" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 21 )

[node name="Correndo" type="AudioStreamPlayer" parent="Sons"]

[node name="SomValeuBoi" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 22 )
volume_db = 1.0

[node name="SomZero" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 23 )
volume_db = 1.0

[node name="SomBip" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 24 )

[node name="Controles" type="Node2D" parent="."]
z_index = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="Controles"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="contagem" type="Label" parent="Controles/Control"]
margin_left = -2.0
margin_top = -2.0
margin_right = 1279.0
margin_bottom = 218.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 25 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Control1" type="Control" parent="Controles"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Controles/Control1"]
position = Vector2( 53.6031, 56.8364 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 26 )

[node name="estrelas" type="Label" parent="Controles/Control1"]
margin_left = 91.0
margin_top = 24.0
margin_right = 234.0
margin_bottom = 197.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
text = "0"
align = 1
valign = 1

[node name="boisAnim" type="AnimationPlayer" parent="."]
editor/display_folded = true
anims/boisAnim = SubResource( 9 )

[node name="bois" type="Node2D" parent="boisAnim"]
editor/display_folded = true
position = Vector2( 0.682062, 0.0852585 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 38.4373, 260.771 )
texture = ExtResource( 28 )

[node name="Sprite 2" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 58.7864, 285.642 )
texture = ExtResource( 29 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite 3" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 39.9446, 318.221 )
texture = ExtResource( 30 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite 4" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 34.6689, 162.793 )
texture = ExtResource( 31 )

[node name="Sprite 5" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 152.995, 162.793 )
texture = ExtResource( 30 )

[node name="Sprite 6" type="Sprite" parent="boisAnim/bois"]
position = Vector2( 95.7163, 171.084 )
texture = ExtResource( 32 )

[node name="puxarcair" type="AnimationPlayer" parent="."]
editor/display_folded = true
anims/puxarcair = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="puxarcair"]
position = Vector2( -217.327, 97.9516 )
z_index = 2
frames = SubResource( 11 )
animation = "caido"
frame = 2
playing = true
<<<<<<< HEAD
=======

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 505.79
margin_top = 208.185
margin_right = 822.79
margin_bottom = 504.185

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 45.5497
margin_top = 572.625
margin_right = 205.55
margin_bottom = 716.625

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 1154.75
margin_top = 22.7606
margin_right = 1263.75
margin_bottom = 127.761
>>>>>>> 9a1fcdfe5f1a8e1b4286da6267967861c8667c3e
[connection signal="body_entered" from="BackAnim/DetectarPontos" to="." method="_on_DetectarPontos_body_enter"]
[connection signal="body_exited" from="BackAnim/DetectarPontos" to="." method="_on_DetectarPontos_body_exit"]
[connection signal="timeout" from="batisteiro/TempoBati" to="batisteiro" method="_on_TempoBati_timeout"]
[connection signal="timeout" from="boi/TempoBoi" to="boi" method="_on_TempoBoi_timeout"]
[connection signal="timeout" from="Vaqueiro/TempoVaqueiro" to="Vaqueiro" method="_on_TempoVaqueiro_timeout"]
[connection signal="pressed" from="comandos/jogar" to="." method="_on_jogar_pressed"]
<<<<<<< HEAD
=======
[connection signal="pressed" from="comandos/jogar" to="batisteiro" method="_on_jogar_pressed"]
[connection signal="pressed" from="comandos/jogar" to="boi" method="_on_jogar_pressed"]
>>>>>>> 9a1fcdfe5f1a8e1b4286da6267967861c8667c3e
[connection signal="pressed" from="comandos/jogar" to="Vaqueiro" method="_on_jogar_pressed"]
[connection signal="pressed" from="comandos/jogar" to="boi" method="_on_jogar_pressed"]
[connection signal="pressed" from="comandos/jogar" to="batisteiro" method="_on_jogar_pressed"]
[connection signal="pressed" from="comandos/puxar" to="." method="_on_puxar_pressed"]
[connection signal="pressed" from="comandos/pause" to="." method="_on_pause_pressed"]
[connection signal="timeout" from="Iniciar" to="." method="_on_Iniciar_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_puxar_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_pause_pressed"]
